feat(gui): implement custom window bar for KiCad installer
- Add WindowBar and WindowButton classes to provide custom window controls
- Integrate custom window bar with QMainWindow in mainwindow.cpp
- Update CMakeLists.txt to include new WidgetFrame library
- Modify main.cpp to set initial theme to Light

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,7 +65,16 @@ target_link_libraries(kicad-installer
     qlementine 
     qlementine-icons    
     QWKWidgets
+    WidgetFrame
 )
+
+
+target_link_directories(
+    kicad-installer
+    PRIVATE SYSTEM
+    "${CMAKE_CURRENT_SOURCE_DIR}/libs"
+)
+
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
