feat(resources): add KiCad installer resources
- Add kicad_installer.qrc and kicad_installer.rc resource files
- Include new icons: icon_kicad.ico and kicad_x_huaqiu.png
- Update RES_FILES list in CMakeLists.txt to include new resources

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,8 @@ set(
 set(
     RES_FILES
     resources/showcase.qrc
+    resources/kicad_installer.qrc
+    resources/icons/kicad_installer.rc
 )
 
 set(PROJECT_SOURCES
