feat(infrastructure): implement get latest version functionality
- Add get_latest_version function to fetch the latest version information
- Update main.cpp to call the get_latest_version function
- Remove unused httplib dependency
- Refactor installation method enum and move to separate header
- Add fmt_download_url function for formatting download URLs

--- a/app/utils/CMakeLists.txt
+++ b/app/utils/CMakeLists.txt
@@ -3,5 +3,6 @@ target_sources(
     PRIVATE
     ${CMAKE_CURRENT_LIST_DIR}/create_shortcut.cpp
     ${CMAKE_CURRENT_LIST_DIR}/downloader.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/get_latest_version.cpp
     ${CMAKE_CURRENT_LIST_DIR}/unzip.cpp
 )
