feat(installer): add unzip functionality and update download progress
- Add unzip functionality to the installer
- Update download progress to handle completion and emit a signal
- Modify main window to handle unzip completion
- Refactor unzip header and implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,10 +14,11 @@ find_package(QT NAMES Qt6 REQUIRED COMPONENTS Widgets LinguistTools)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets LinguistTools)
 find_package(nlohmann_json CONFIG REQUIRED)
 find_package(spdlog CONFIG REQUIRED)
- find_package(cpr CONFIG REQUIRED)
+find_package(cpr CONFIG REQUIRED)
+find_package(unofficial-minizip CONFIG REQUIRED)
 
 set(
-    TS_FILES 
+    TS_FILES
     i18n/kicad-installer_zh_CN.ts
 )
 
@@ -28,9 +29,9 @@ set(
 )
 
 set(PROJECT_SOURCES
-        main.cpp
-        ${TS_FILES}
-        ${RES_FILES}
+    main.cpp
+    ${TS_FILES}
+    ${RES_FILES}
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
@@ -40,19 +41,20 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         app/pages/pageconfigportable.h app/pages/pageconfigportable.cpp app/pages/pageconfigportable.ui
         app/pages/pagedownloadprogress.h app/pages/pagedownloadprogress.cpp app/pages/pagedownloadprogress.ui
     )
-# Define target properties for Android with Qt 6 as:
-#    set_property(TARGET kicad-installer APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
-#                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
-# For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
 
+    # Define target properties for Android with Qt 6 as:
+    # set_property(TARGET kicad-installer APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
+    # ${CMAKE_CURRENT_SOURCE_DIR}/android)
+    # For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
     qt_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} ${TS_FILES})
 else()
     if(ANDROID)
         add_library(kicad-installer SHARED
             ${PROJECT_SOURCES}
         )
-# Define properties for Android with Qt 5 after find_package() calls as:
-#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
+
+    # Define properties for Android with Qt 5 after find_package() calls as:
+    # set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
     else()
         add_executable(kicad-installer
             ${PROJECT_SOURCES}
@@ -65,15 +67,15 @@ endif()
 add_subdirectory(libs)
 add_subdirectory(app)
 
-target_link_libraries(kicad-installer 
-    PRIVATE 
-    Qt${QT_VERSION_MAJOR}::Widgets 
+target_link_libraries(kicad-installer
+    PRIVATE
+    Qt${QT_VERSION_MAJOR}::Widgets
     QWKWidgets
     nlohmann_json::nlohmann_json
     spdlog::spdlog
     cpr::cpr
+    unofficial::minizip::minizip
 )
-
 
 target_link_directories(
     kicad-installer
@@ -82,13 +84,13 @@ target_link_directories(
     "${CMAKE_CURRENT_SOURCE_DIR}/app"
 )
 
-
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
 # explicit, fixed bundle identifier manually though.
 if(${QT_VERSION} VERSION_LESS 6.1.0)
-  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.kicad-installer)
+    set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.kicad-installer)
 endif()
+
 set_target_properties(kicad-installer PROPERTIES
     ${BUNDLE_ID_OPTION}
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
