--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         ${PROJECT_SOURCES}
         app/pages/pageconfigportable.h app/pages/pageconfigportable.cpp app/pages/pageconfigportable.ui
         app/pages/pagedownloadprogress.h app/pages/pagedownloadprogress.cpp app/pages/pagedownloadprogress.ui
+        app/logo/logowidget.h app/logo/logowidget.cpp app/logo/logowidget.ui
     )
 
     # Define target properties for Android with Qt 6 as:
