feat(installer): update UI layout and remove unused files
- Update UI layout for logo widget, main window, and various pages
- Remove unused pageconfigportable.ui file
- Add new UI files for pageconfcontainer, pageopendownloaddir, and pageselectsavepath
- Update CMakeLists.txt to include new files
- Remove huaqiu-animate.gif from resources

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,9 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         app/pages/pageconfigportable.h app/pages/pageconfigportable.cpp app/pages/pageconfigportable.ui
         app/pages/pagedownloadprogress.h app/pages/pagedownloadprogress.cpp app/pages/pagedownloadprogress.ui
         app/logo/logowidget.h app/logo/logowidget.cpp app/logo/logowidget.ui
+        app/pages/pageopendownloaddir.h app/pages/pageopendownloaddir.cpp app/pages/pageopendownloaddir.ui
+        app/pages/pageselectsavepath.h app/pages/pageselectsavepath.cpp app/pages/pageselectsavepath.ui
+        app/pages/pageconfcontainer.h app/pages/pageconfcontainer.cpp app/pages/pageconfcontainer.ui
     )
 
     # Define target properties for Android with Qt 6 as:
