--- a/resources/icons/kicad_installer.rc
+++ b/resources/icons/kicad_installer.rc
@@ -1,1 +1,29 @@
 IDI_ICON1 ICON "icon_kicad.ico"
+
+VS_VERSION_INFO VERSIONINFO
+ FILEVERSION 1,0,0,0
+ PRODUCTVERSION 1,0,0,0
+ FILEFLAGSMASK 0x3fL
+ FILEFLAGS 0x0L
+ FILEOS 0x40004L
+ FILETYPE 0x1L
+ FILESUBTYPE 0x0L
+BEGIN
+    BLOCK "StringFileInfo"
+    BEGIN
+        BLOCK "040904b0"
+        BEGIN
+            VALUE "CompanyName", "kicad.eda.cn"
+            VALUE "FileDescription", "KiCad Installer"
+            VALUE "FileVersion", "1.0.0.0"
+            VALUE "InternalName", "kicad-installer"
+            VALUE "LegalCopyright", "Copyright (C) 2025 kicad.eda.cn"
+            VALUE "OriginalFilename", "kicad-installer.exe"
+            VALUE "ProductName", "KiCad Installer"
+            VALUE "ProductVersion", "1.0.0.0"
+        END
+    END
+    BLOCK "VarFileInfo"
+    BEGIN
+        VALUE "Translation", 0x0409, 1200
+    END
