build: update company name and copyright in installer resource file
- Change CompanyName from "kicad.eda.cn" to "eda.cn"
- Update LegalCopyright to use "eda.cn" instead of "kicad.eda.cn"

--- a/resources/icons/kicad_installer.rc
+++ b/resources/icons/kicad_installer.rc
@@ -15,11 +15,11 @@ BEGIN
     BEGIN
         BLOCK "040904b0"
         BEGIN
-            VALUE "CompanyName", "kicad.eda.cn"
+            VALUE "CompanyName", "eda.cn"
             VALUE "FileDescription", "KiCad Installer"
             VALUE "FileVersion", "1.0.0.0"
             VALUE "InternalName", "kicad-installer"
-            VALUE "LegalCopyright", "Copyright (C) 2025 kicad.eda.cn"
+            VALUE "LegalCopyright", "Copyright (C) 2025 eda.cn"
             VALUE "OriginalFilename", "kicad-installer.exe"
             VALUE "ProductName", "KiCad Installer"
             VALUE "ProductVersion", "1.0.0.0"
